cmake_minimum_required(VERSION 3.24)
project(assignment1 C)

set(CMAKE_C_STANDARD 11)

add_executable(assignment1 assignment1_1.c assignment1_2.c assignment1_3.c assignment1_4.c assignment1_5.c)
add_executable(assignment1_1 assignment1_1.c)
add_executable(assignment1_2 assignment1_2.c)
add_executable(assignment1_3 assignment1_3.c)
add_executable(assignment1_4 assignment1_4.c)
add_executable(assignment1_5 assignment1_5.c)
